refactor: align GC pause metrics to JMH iterations